Images and Media

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 .row-header{
-    margin:0px 0px 0px 0px;
-    padding:30px;
+    margin:0px auto;
+    padding:0px auto;
 }
 
 .row-content{
     margin:0px auto;
-    padding:30px 30px;
+    padding:50px 30px;
     border-bottom:1px groove;
     min-height:400px;
 }
@@ -17,7 +17,7 @@
 }
 
 .jumbotron{
-    padding:70px 0px 70px 0px;
+    padding:70px 0px;
     margin:0px auto;
     background: #9575CD;
     color:floralwhite;
