--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,6 +2,7 @@ $lt-gray: #ddd;
 $background-dark: #512DA8;
 $background-light: #9575CD;
 $background-pale: #D1C4E9;
+$floralwhite:#FFFAF0;
 
 // Height variables
 $carousel-item-height: 300px;
@@ -74,6 +75,22 @@ body{
     bottom: 0px;
     z-index: 1;
 }
+
+.modal-header{
+    background:$background-dark;      
+    .modal-title{
+        color:$floralwhite;
+    }
+    button{
+        color:$floralwhite;
+    }
+    
+}
+.modal-body{
+    background-color: $background-pale;
+}
+
+
 
 
 
